# Brainfast

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  README.zh-CN.md  Start_Brainfast.bat  pyproject.toml  ruff.toml
.github/workflows/: test.yml
project/: ATLAS_OVERLAY_GUIDE.md  README.md  USER_MANUAL.md  download_atlas.py  requirements-min.txt  tmp_iter3_verify.py  tmp_overlay_verify.py  tmp_run_nonlinear_check.py  tmp_run_nonlinear_fail_check.py  version.json
project/configs/: allen_structure_tree.json  run_config.template.json  run_config_35.json  run_config_35_quick.json  run_config_35_test.json  run_config_3d_ants_miki_like_sample.json  run_config_3d_ants_sample.json  run_config_3d_sample.json
project/docs/: README.en.md  README.zh-CN.md  internal_3d_sample_workflow.md
project/frontend/: IdleBrainUI.spec  README.md  RELEASE_NOTES_v0.3.0.md  StartBrainfast.bat  StopBrainfast.bat  app.js  build_desktop.bat  desktop_app.py  index.html  server.py  server_context.py  styles.css
project/notes/: atlas_overlay_final_summary.md  claude_review_bundle.md  demo_atlas_map.csv  demo_cells.csv  frontend-iter8-summary.md  next-actions.md  reuse-plan.md  step2-summary.md  step5-handover.md
project/scripts/: ai_landmark.py  align_ai.py  align_baseline.py  align_nonlinear.py  allen_colors.py  atlas_autopick.py  atlas_mapper.py  benchmark_sample_registration.py  build_registration_report.py  build_version_json.py  check_env.py  compare_render.py  config_validation.py  dedup.py  detect.py  exceptions.py  laplacian_refine.py  logging_setup.py  main.py  paths.py  (+15 more)
(+43 files in other folders)
